--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
     font-family: 'Poppins', sans-serif;
-    margin: 0%;
 }
 h1{
     font-size: 50px;
@@ -10,6 +9,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
@@ -24,9 +24,9 @@ section{
      padding: 10px 40px;
      color: white;
      font-weight: 500;
-    border-radius: 20px;
+    border-radius: 20px
 }
-.top-banner{
-    background-image: url(images/top-banner.png);
-    background-repeat: no-repeat;
+.half-width{
+    width: 90%;
+    padding: 3%;
 }
