--- a/style.css
+++ b/style.css
@@ -4,16 +4,20 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 20px;
+}
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
     padding: 2%;
+    
 }
 .half-width img{
     width: 100%;
@@ -29,4 +33,30 @@ section{
 .half-width{
     width: 90%;
     padding: 3%;
+}
+.recipie-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px rgb(120, 175, 11);
+}
+#web-dhaba-recipie{
+    border-left: 7px solid;
+ border-image: linear-gradient(blue, cyan);
+ border-image-slice: 1;
+}
+#web-kim-recipie{
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon, tomato);
+    border-image-slice: 1;
+}
+#web-vegetables-recipie{
+    border-left: 7px solid;
+    border-image: linear-gradient(green, yellow);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
